assets/css/style.css
.content-section {
  margin-bottom: 25px;
}

@media(min-width: 768px) {
  .content-section {
    margin-bottom: 65px;
  }
}

.main-section.right {
  overflow: scroll;
}

@media (min-width: 768px) {
  .footer {
    position: fixed;
    left: auto;
    width: 60%;
  }

  .main-section.right {
    position: relative;
    width: 60%;
    padding-top: 50px;
  }
}

